Fix Mutable Data Structure in SnapshotsInProgress (#76505)
The feature info instances shouldn't be mutable to prevent accidental bugs down the line.